; ModuleID = '/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_env.c_CMS_RecipientInfo_encrypt.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/cms/extr_cms_env.c_CMS_RecipientInfo_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@CMS_F_CMS_RECIPIENTINFO_ENCRYPT = common dso_local global i32 0, align 4
@CMS_R_UNSUPPORTED_RECIPIENT_TYPE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @CMS_RecipientInfo_encrypt(i32* %0, %struct.TYPE_7__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_7__* %1, %struct.TYPE_7__** %5, align 8
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  switch i32 %8, label %25 [
    i32 128, label %9
    i32 131, label %13
    i32 130, label %17
    i32 129, label %21
  ]

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %12 = call i32 @cms_RecipientInfo_ktri_encrypt(i32* %10, %struct.TYPE_7__* %11)
  store i32 %12, i32* %3, align 4
  br label %29

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %16 = call i32 @cms_RecipientInfo_kari_encrypt(i32* %14, %struct.TYPE_7__* %15)
  store i32 %16, i32* %3, align 4
  br label %29

17:                                               ; preds = %2
  %18 = load i32*, i32** %4, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %20 = call i32 @cms_RecipientInfo_kekri_encrypt(i32* %18, %struct.TYPE_7__* %19)
  store i32 %20, i32* %3, align 4
  br label %29

21:                                               ; preds = %2
  %22 = load i32*, i32** %4, align 8
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %24 = call i32 @cms_RecipientInfo_pwri_crypt(i32* %22, %struct.TYPE_7__* %23, i32 1)
  store i32 %24, i32* %3, align 4
  br label %29

25:                                               ; preds = %2
  %26 = load i32, i32* @CMS_F_CMS_RECIPIENTINFO_ENCRYPT, align 4
  %27 = load i32, i32* @CMS_R_UNSUPPORTED_RECIPIENT_TYPE, align 4
  %28 = call i32 @CMSerr(i32 %26, i32 %27)
  store i32 0, i32* %3, align 4
  br label %29

29:                                               ; preds = %25, %21, %17, %13, %9
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @cms_RecipientInfo_ktri_encrypt(i32*, %struct.TYPE_7__*) #1

declare dso_local i32 @cms_RecipientInfo_kari_encrypt(i32*, %struct.TYPE_7__*) #1

declare dso_local i32 @cms_RecipientInfo_kekri_encrypt(i32*, %struct.TYPE_7__*) #1

declare dso_local i32 @cms_RecipientInfo_pwri_crypt(i32*, %struct.TYPE_7__*, i32) #1

declare dso_local i32 @CMSerr(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
